[tool.poetry]
name = "rxpy-tutorial"
version = "0.1.0"
description = ""
authors = ["laj <larry.jones@reveal-energy.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.2.9"
ipython = "^8.0.1"
Rx = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
